[package]
name = "test_iota_identity"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dotenvy = "0.15.7"
env_logger = "0.11.5"
futures = "0.3.30"
identity_iota = { version = "1.3.1", features = ["memstore"] }
identity_stronghold = "1.3.1"
iota-sdk = { version = "1.1.5", default-features = false, features = ["tls", "client", "stronghold"] }
log = "0.4.22"
plotters = "0.3.6"
rand = "0.8.5"
rayon = "1.10.0"
serde_json = "1.0.122"
tokio = { version = "1.39.2", default-features = false, features = ["rt"] }
