[package]
name = "test_iota_identity"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
dotenvy = "0.15.7"
env_logger = "0.11.5"
futures = "0.3.30"
identity_iota = { version = "1.3.1", features = ["memstore"] }
identity_stronghold = { version = "1.3.1", features = ["send-sync-storage"] }
iota-sdk = { version = "1.1.5", default-features = false, features = [
    "tls",
    "client",
    "stronghold",
] }
itertools = "0.13.0"
log = "0.4.22"
num_cpus = "1.16.0"
# plotly = { version = "0.9.1", features = ["kaleido"] } # Bug in kaleido 0.2.1 on windows 11, hence using 0.1.0
plotly = { git = "https://github.com/CS5000-Master-Thesis/plotly.rs.git", rev = "6b6b50e39882f119b2a237017d79100d2f352bdd", features = [
    "kaleido",
] }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.122"
statrs = "0.17.1"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.39.2", default-features = false, features = ["rt"] }
